java & javafx version upgrade